# ec2-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ec2_cli/: main.py
