[tool.poetry]
name = "ec2_cli"
version = "0.1.0"
description = ""
authors = ["tatsuya4559 <tatsuya.k1029@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
boto3 = "^1.14.51"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
